# ofot-chipyard

./: .gitignore  dual-test-asm.sh  dual-test.sh
generators/chipyard/src/main/scala/config/: OFOConfigs.scala
tests/: CMakeLists.txt  Makefile
vlsi/: tech-sky130-inst.yml
vlsi/build-sky130-commercial/chipyard.harness.TestHarness.TinyRocketConfig-ChipTop/: sram_generator-input.yml
